--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "Hello Extensions",
+    "name": "Panic Button",
     "description": "Base Level Extension",
     "version": "1.0",
     "manifest_version": 3,
     "action": {
       "default_popup": "hello.html",
-      "default_icon": "plant.jpg"
+      "default_icon": "plant.png"
     }
   }
